# SmallWheel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
GLAD/: CMakeLists.txt
GLAD/include/glad/: gl.h
res/shaders/glsl/: ColorIn.frag  ColorOut.vert
src/: Application.cpp  Application.h  Defines.h  SmallWheel.hpp  swpch.hpp
src/SmallWheel/: Application.cpp  Application.hpp  Core.hpp  CoreShaderRegistry.cpp  CoreShaderRegistry.hpp  Defines.hpp  EngineConfiguration.cpp  EngineConfiguration.hpp  EntryPoint.hpp  Event.hpp  SDLLifetime.cpp  SDLLifetime.hpp  Window.hpp
src/SmallWheel/GraphicsBackend/: Buffer.hpp  Camera.cpp  Camera.hpp  CommonVertexLayouts.cpp  CommonVertexLayouts.hpp  GraphicsBackend.cpp  GraphicsBackend.hpp  Mesh.hpp  MeshData.cpp  MeshData.hpp  RendererAPIs.hpp  Shader.hpp  ShaderRegistry.cpp  ShaderRegistry.hpp  ShaderResourceRegistry.cpp  ShaderResourceRegistry.hpp  VertexLayout.cpp  VertexLayout.hpp
src/SmallWheel/GraphicsBackend/Renderers/: SimpleMeshRenderer.cpp  SimpleMeshRenderer.hpp
src/SmallWheel/Imgui/: ImguiLayer.cpp  ImguiLayer.hpp  ImguiLayerImpl.h
src/SmallWheel/Layering/: ImguiLayer.cpp  ImguiLayer.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  ShaderManagerLayer.cpp  ShaderManagerLayer.hpp
src/SmallWheel/OpenGL/: OpenGLContext.hpp
src/SmallWheel/Platform/OpenGL/: OpenGLBackend.cpp  OpenGLBackend.hpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLImguiLayerImpl.cpp  OpenGLImguiLayerImpl.hpp  OpenGLMesh.cpp  OpenGLMesh.hpp  OpenGLMeshData.h  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  OpenGLimguiRenderer.cpp
src/SmallWheel/Renderer/: Buffer.hpp  CommonVertexLayouts.cpp  CommonVertexLayouts.hpp  GeometryObject.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexLayout.cpp  VertexLayout.hpp
src/SmallWheel/Utils/: CLIArguments.cpp  CLIArguments.hpp  CmdArguments.cpp  CmdArguments.hpp  FileUtils.cpp  FileUtils.hpp  LogUtils.hpp  RefCounted.hpp  Result.hpp
src/SmallWheel/Windowing/: ApplicationWindow.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  Window.hpp  WindowManager.hpp
src/SmallWheel/testing/: test_print.cpp  test_print.h  test_print.hpp
src/Windowing/: SDL2Window.cpp  SDL2Window.hpp
src/testing/: test_print.cpp  test_print.h
