cmake_minimum_required(VERSION 3.25)
project(SmallWheel VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

file(GLOB_RECURSE PROJECT_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(PROJECT_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/)

add_library(SmallWheel SHARED ${PROJECT_SOURCE})
target_include_directories(SmallWheel PRIVATE ${PROJECT_INCLUDES})

if(WIN32)
    add_compile_definitions(SW_PLATFORM_WINDOWS)
endif()
add_compile_definitions(SW_BUILD_DLL, TEST_DEFINE)
