project(GLAD, VERSION 0.1.0 LANGUAGES C)

set(CMAKE_EXPORT_COMPILE_COMMANDS True)

file(GLOB_RECURSE PROJECT_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
set(PROJECT_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include/)

add_library(GLAD STATIC ${PROJECT_SOURCE})
target_include_directories(GLAD PUBLIC ${PROJECT_INCLUDES})
